--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  background-color: #E8F1F2;
+  padding-bottom: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  height: 255px;
+  width: 100%;
+  background-color: #13293D;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header p {
+  font-size: 96px;
+  color: #ffffff;
+  font-weight: 700;
+  font-style: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.header-container{
+  align-self: flex-end;
+  height: fit-content;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 0;
+}
+
+.header p img {
+  max-height: 79px;
+  transform: translateY(-10px);
+}
+
+.main{
+  margin: 0 auto;
+  width: 80%;
+}
+
+.main p{
+  margin-top: 0;
+  font-size: 48px;
+  font-weight: 700;
+  color: #13293D;
+}
+
+.new-task{
+  width: 100%;
+  margin-top: 40px;
+}
+
+.title{
+  position: relative;
+  width: fit-content;
+  padding: 8px 16px;
+  background-color: #13293D;
+  border-radius: 8px;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 24px;
+  left: 0;
+}
+
+
+form{
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 1.5em;
+  justify-content: space-between;
+}
+
+
+input{
+  padding: 20px 15px;
+  border: none;
+  background-color: #ffffff;
+  grid-row: 2;
+}
+
+
+label{
+  font-size: 32px;
+  color: #414141;
+  font-weight: 600;
+  grid-row: 1;
+}
+
+#label-name, #name{
+  grid-column: 1/8;
+}
+
+#label-date, #date{
+  grid-column: 8/11;
+}
+
+.submit-button{
+  border: none;
+  background-color: #ffffff;
+  color: #616161;
+  font-weight: 700;
+  grid-column: 11/13;
+  max-height: 39px;
+  min-height: 39px;
+  grid-row: 2;
+}
+
+hr{
+  margin-top: 40px;
+  border-top: 4px solid #13293D;
+}
+
+
+span.add-icon {
+  display: inline-block;
+}
+
+@media (min-width:960px){
+  span.add-text {display: inline-block;}
+  
+}
+
+@media (max-width:960px){
+  span.add-text {display: none;}
+  .header-container{
+    margin: 0 auto;
+    margin-top: 48px;
+    width: 80%;
+    transform: translateY(-50px);
   }
-  to {
-    transform: rotate(360deg);
+  .header p {
+    font-size: 56px;
+    font-style: bold;
   }
+  .header p img {
+    max-height: 64px;
+  }
+  label{font-size: 16px;}
+  #label-name, #name{
+    grid-column: 1/7;
+  }
+  #label-date, #date{
+    grid-column: 7/11;
+  }
+
+  .main p{
+    font-size: 24px;
+  }
+
 }
